--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router-dom": "^6.15.0",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
+    "stripe": "^14.10.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.2",
