--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.15.0",
+    "recharts": "^2.10.3",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
     "stripe": "^14.10.0",
